Creating navigation between home components and products.

--- a/crud_angular_09/frontend/src/app/components/template/header/header.component.css
+++ b/crud_angular_09/frontend/src/app/components/template/header/header.component.css
@@ -10,4 +10,12 @@
 
 .header .logo{
     max-height: 32px;
+    cursor: pointer;
+}
+
+.header .title-group{
+    padding-left: 25px;
+}
+.header .title-group i{
+    padding-right: 5px;
 }
