--- a/crud_angular_09/frontend/src/app/components/template/header/header.component.html
+++ b/crud_angular_09/frontend/src/app/components/template/header/header.component.html
@@ -1,8 +1,17 @@
 <mat-toolbar class="header mat-elevation-z4">
     <span>
         <a>
-            <img class="logo" src="assets/img/logo.png" alt="logo">
+            <img class="logo" src="assets/img/logo.png" alt="logo" routerLink="/">
         </a>
+    </span>
+    <span class="title-group">
+        <a>
+            <i class="material-icons">
+                home
+            </i>
+            Inicio
+        </a>
+
     </span>
 
 </mat-toolbar>
