--- a/crud_angular_09/frontend/src/app/components/template/footer/footer.component.html
+++ b/crud_angular_09/frontend/src/app/components/template/footer/footer.component.html
@@ -1,10 +1,11 @@
 <mat-toolbar class="footer">
     <span>
         Desenvolvido com
-        <i class="material-icons red v-middle">
+        <i class="material-icons v-middle" appRed>
         favorite
         </i>
         por
         <strong> Abel <span class="red"> Sena </span> </strong>
     </span>
+    
 </mat-toolbar>
