--- a/crud_angular_09/frontend/src/app/views/product-crud/product-crud.component.html
+++ b/crud_angular_09/frontend/src/app/views/product-crud/product-crud.component.html
@@ -1,1 +1,4 @@
-<p>product-crud works!</p>
+<p>FAZER NOVO CADASTRO</p>
+
+
+<button mat-raised-button (click)="navigateToProductCreate()" color="primary">Novo Produto</button>
