--- a/crud_angular_09/frontend/src/styles.css
+++ b/crud_angular_09/frontend/src/styles.css
@@ -4,7 +4,12 @@ html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .red {
-    color: rgb(227, 94, 107);
+    color: #e35f6c;
+}
+.colorGreen{
+    color: rgb(7, 7, 7);
+    font-weight: 300;
+    background-color: #f0e21d;
 }
 
 .v-middle {
